{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 37,
  "lineage": "69eb15af-2ea0-0384-af28-43eeaee8d237",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:vpc/vpc-c1fd36bc",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-f86fcb97",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-7166120b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-c1fd36bc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-2571275b",
            "owner_id": "454292364057"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "compliant",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:security-group/sg-060dedc63022e1e8d",
            "description": "Compliant security group",
            "egress": [],
            "id": "sg-060dedc63022e1e8d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05ea43fbba47f121b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "compliant-sg",
            "name_prefix": "",
            "owner_id": "454292364057",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0335164d45d4de431"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "non_compliant",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:security-group/sg-0c768e2cbc8b7b287",
            "description": "Non-compliant security group",
            "egress": [],
            "id": "sg-0c768e2cbc8b7b287",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "non-compliant-sg",
            "name_prefix": "",
            "owner_id": "454292364057",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0335164d45d4de431"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:security-group/sg-05ea43fbba47f121b",
            "description": "Security group from where connections are allowed into the database",
            "egress": [],
            "id": "sg-05ea43fbba47f121b",
            "ingress": [],
            "name": "source-sg",
            "name_prefix": "",
            "owner_id": "454292364057",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0335164d45d4de431"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "not_allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:subnet/subnet-009bd39587170c685",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.128.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009bd39587170c685",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "454292364057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-default-vpc"
            },
            "tags_all": {
              "Name": "subnet-default-vpc"
            },
            "vpc_id": "vpc-c1fd36bc"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:subnet/subnet-06ffabfed88b3c3c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ffabfed88b3c3c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "454292364057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Access": "private",
              "Name": "subnet-custom-vpc-private1"
            },
            "tags_all": {
              "Access": "private",
              "Name": "subnet-custom-vpc-private1"
            },
            "vpc_id": "vpc-0335164d45d4de431"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:subnet/subnet-0f3a040b42c20899b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3a040b42c20899b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "454292364057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Access": "private",
              "Name": "subnet-custom-vpc-private2"
            },
            "tags_all": {
              "Access": "private",
              "Name": "subnet-custom-vpc-private2"
            },
            "vpc_id": "vpc-0335164d45d4de431"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:subnet/subnet-0ad4b9bfdb788a987",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad4b9bfdb788a987",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "454292364057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-custom-vpc-public1"
            },
            "tags_all": {
              "Name": "subnet-custom-vpc-public1"
            },
            "vpc_id": "vpc-0335164d45d4de431"
          },
          "dependencies": [
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:vpc/vpc-0335164d45d4de431",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02587027bbe56df1a",
            "default_route_table_id": "rtb-098e49d9a1af3fe40",
            "default_security_group_id": "sg-0aafe90de9ba1b122",
            "dhcp_options_id": "dopt-7166120b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0335164d45d4de431",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-098e49d9a1af3fe40",
            "owner_id": "454292364057",
            "tags": {
              "Name": "proj04-custom"
            },
            "tags_all": {
              "Name": "proj04-custom"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:security-group-rule/sgr-04355cf007e92268f",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-04355cf007e92268f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-05ea43fbba47f121b",
            "security_group_id": "sg-060dedc63022e1e8d",
            "security_group_rule_id": "sgr-04355cf007e92268f",
            "tags": null,
            "tags_all": {},
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.compliant",
            "aws_security_group.source",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:security-group-rule/sgr-0331dd87a362f4bec",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0331dd87a362f4bec",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c768e2cbc8b7b287",
            "security_group_rule_id": "sgr-0331dd87a362f4bec",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.non_compliant",
            "aws_vpc.custom"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "data",
      "type": "aws_subnet",
      "name": "input",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-06ffabfed88b3c3c9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:subnet/subnet-06ffabfed88b3c3c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ffabfed88b3c3c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "454292364057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Access": "private",
              "Name": "subnet-custom-vpc-private1"
            },
            "vpc_id": "vpc-0335164d45d4de431"
          }
        },
        {
          "index_key": "subnet-0f3a040b42c20899b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:subnet/subnet-0f3a040b42c20899b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3a040b42c20899b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "454292364057",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Access": "private",
              "Name": "subnet-custom-vpc-private2"
            },
            "vpc_id": "vpc-0335164d45d4de431"
          }
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454292364057:vpc/vpc-c1fd36bc",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-f86fcb97",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-7166120b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-c1fd36bc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-2571275b",
            "owner_id": "454292364057"
          }
        }
      ]
    }
  ]
}